--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -18,5 +18,5 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("")
+    background-image: url("");
 }
