--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -18,5 +18,136 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("");
+    background-image: url(../assets/fondo.png);
+    backdrop-filter: blur(10px);
+}
+
+.container{
+    width: 1680px;
+    height: 840px;
+    display: flex;
+}
+
+.containerLogo{
+    width: 840px;
+    background-image: url("../assets/logo.jpg");
+    background-size: cover;
+    border-radius: 30px 0 0 30px;
+}
+
+.wrapper{
+    position: relative;
+    width: 840px;
+    height: 840px;
+    background-color: rgba(193, 170, 146, 0.7);
+    border-radius: 0 30px 30px 0;
+    display: flex;
+    flex-direction:column; 
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper .form-box{
+    width: 100%;
+    padding: 80px;
+}
+
+.form-box h2{
+    font-size: 4em;
+    color: #201E1E;
+    text-align: center;
+}
+
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin: 30px 0;
+}
+
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1.5em;
+    color: #162938;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label {
+    top: -10px;
+}
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1.6em;
+    color: #162938;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+}
+
+.input-box .icon{
+    position: absolute;
+    right: 8px;
+    font-size: 2em;
+    color: #162938;
+    line-height: 57px;
+}
+
+.forgot{
+    font-size: 1.4em;
+    color:#162938;
+    font-weight: 500;
+    margin: 30px 0 30px;
+    display: flex;
+    justify-content: end;
+}
+
+.forgot a{
+    color: #162938;
+    text-decoration: none;
+}
+
+.forgot a:hover{
+    text-decoration: underline;
+}
+
+.btn{
+    width: 100%;
+    height: 92px;
+    background: #7A4A2F;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    color: #fff;
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.login-register{
+    font-size: 1.5em;
+    color: #162938;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+
+.login-register p a{
+    color: #162938;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.login-register p a:hover{
+    text-decoration: underline;
 }
