--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -1,12 +1,3 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : 23 nov 2023, 16:48:10
-    Author     : dgocr
-*/
-
 *{
     padding: 0;
     margin: 0;
@@ -26,6 +17,8 @@ body{
     width: 1680px;
     height: 840px;
     display: flex;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.5);
+    border-radius: 30px;
 }
 
 .containerLogo{
@@ -36,21 +29,49 @@ body{
 }
 
 .wrapper{
-    position: relative;
+    position:  relative;
     width: 840px;
     height: 840px;
     background-color: rgba(193, 170, 146, 0.7);
     border-radius: 0 30px 30px 0;
     display: flex;
-    flex-direction:column; 
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    transition: height .2s ease;
+}
+
+.wrapper.active{
+    
 }
 
 .wrapper .form-box{
     width: 100%;
     padding: 80px;
 }
+
+.wrapper .form-box.login{
+    transition: transform .3s ease;
+    transform: translateX(0);
+}
+
+.wrapper.active .form-box.login{
+    transition: none;
+    transform: translateX(-800px);
+}
+
+.wrapper .form-box.register{
+    position: absolute;
+    transition: none;
+    transform: translateX(800px);    
+}
+
+.wrapper.active .form-box.register{
+    transition: transform .3s ease;
+    transform: translateX(0);  
+}
+
+
 
 .form-box h2{
     font-size: 4em;
@@ -146,8 +167,4 @@ body{
     color: #162938;
     text-decoration: none;
     font-weight: 600;
-}
-
-.login-register p a:hover{
-    text-decoration: underline;
 }
