--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -142,18 +142,28 @@ body{
     text-decoration: underline;
 }
 
+
+
 .btn{
-    width: 100%;
-    height: 92px;
     background: #7A4A2F;
     border: none;
-    outline: none;
     border-radius: 6px;
     cursor: pointer;
     color: #fff;
     font-size: 2em;
     font-weight: 500;
+    width: 100%;
+    height: 92px;
+    outline: none;
+    
 }
+
+.btn a{
+    color: white;
+    text-decoration: none;
+    width: 100%;
+}
+
 
 .login-register{
     font-size: 1.5em;
@@ -167,4 +177,13 @@ body{
     color: #162938;
     text-decoration: none;
     font-weight: 600;
+}
+
+.checkbox-group {
+    display: flex;
+    align-items: center;
+}
+
+input[type="checkbox"] {
+    margin-right: 5px;
 }
